syntax = "proto3";

package ax.examples.banking;
option go_package = "messages";

// OpenAccount is a command that opens a new bank account.
message OpenAccount {
    string account_id = 1;
    string name = 2;
}

// AccountOpened is an event that occurs when a new account is opened.
message AccountOpened {
    string account_id = 1;
    string name = 2;
}

// CreditAccount is a command that credits funds to an account.
message CreditAccount {
    string account_id = 1;
    int32 amount_in_cents = 2;
    string transfer_id = 3;
}

// AccountCredited is an event that occurs when funds are credited to an
// account.
message AccountCredited {
    string account_id = 1;
    int32 amount_in_cents = 2;
    string transfer_id = 3;
}

// DebitAccount is a command that debits funds from an account.
message DebitAccount {
    string account_id = 1;
    int32 amount_in_cents = 2;
    string transfer_id = 3;
}

// AccountDebited is an event that occurs when funds are debited from an
// account.
message AccountDebited {
    string account_id = 1;
    int32 amount_in_cents = 2;
    string transfer_id = 3;
}
